feat: Add interactive map search and AI batch analysis
New Features:
✨ Interactive map-based search with OpenStreetMap
  - Point + radius selection
  - Bounding box (rectangle) selection
  - Custom polygon drawing
  - Visual selection feedback on map
  - Real-time marker display for results

✨ AI Batch Analysis with Sample Preview
  - Step 1: Preview 3 sample images before full analysis
  - Step 2: Batch process all images with Gemini AI
  - Progress tracking for large datasets
  - Export results with AI analysis included

✨ Enhanced User Experience
  - Drag-and-drop map interactions
  - Clear visual instructions
  - Quick prompt templates
  - Result preview in modal dialogs

Technical Changes:
- Added flutter_map ^6.1.0 for map display
- Added url_launcher ^6.2.2 for external links
- Created MapSearchScreen with interactive area selection
- Created BatchAnalysisScreen with sample preview
- Integrated AI analysis with Mapillary search results
- Updated home screen with map search feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,16 @@ dependencies:
   # Location & Maps
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  flutter_map: ^6.1.0          # Interactive map display
   
   # File Picking
   file_picker: ^6.1.1
   
   # Polygon & Geometry (for area selection)
   latlong2: ^0.9.0
+  
+  # URL launcher
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
